--- a/khyeras/styles/khyeras_v1/template/utilities/macros.html
+++ b/khyeras/styles/khyeras_v1/template/utilities/macros.html
@@ -10,27 +10,33 @@
 	{{ value | replace({'"' : '', '\'' : '', '(' : '', ')' : '', ',' : '', '!' : '', ' ' : '-'}) | lower }}
 {% endspaceless %}{% endmacro %}
 
-{% macro create_filters(title, filters) %}
+{% macro create_filters(account, title, filters) %}
 	<section class="card-filters page-content-section">
 		<div class="card-filter-row">
 			<div class="card-filter-column card-filter-label">Filter {{ title }}:</div>
 			{% for key, card in filters %}
-				<div class="card-filter-column card-filter-menu">
-					<div class="dropdown-container">
-						<div class="dropdown-trigger">
-							<span>{{ key }}</span><i class="icon icon-lg fa-angle-down"></i>
-						</div>
-						<div class="dropdown">
-							<ul class="dropdown-contents" role="menu">
-								{% for filter in card %}
-									<li>
-										<a class="card-filter" id="card-filter-{{ _self.create_handle(key) }}-{{ _self.create_handle(filter) }}" data-field="{{ _self.create_handle(key) }}" data-filter="{{ _self.create_handle(filter) }}" title="{{ filter }}" role="menuitem">{{ filter }}</a>
-									</li>
-								{% endfor %}
-							</ul>
+				{% set show_filter = true %}
+				{% if (title == 'Achievements' || title == 'Levels') && account == 'Writer' && key == 'Status' %}
+					{% set show_filter = false %}
+				{% endif %}
+				{% if show_filter %}
+					<div class="card-filter-column card-filter-menu">
+						<div class="dropdown-container">
+							<div class="dropdown-trigger">
+								<span>{{ key }}</span><i class="icon icon-lg fa-angle-down"></i>
+							</div>
+							<div class="dropdown">
+								<ul class="dropdown-contents" role="menu">
+									{% for filter in card %}
+										<li>
+											<a class="card-filter" id="card-filter-{{ _self.create_handle(key) }}-{{ _self.create_handle(filter) }}" data-field="{{ _self.create_handle(key) }}" data-filter="{{ _self.create_handle(filter) }}" title="{{ filter }}" role="menuitem">{{ filter }}</a>
+										</li>
+									{% endfor %}
+								</ul>
+							</div>
 						</div>
 					</div>
-				</div>
+				{% endif %}
 			{% endfor %}
 			<div class="card-filter-column card-filter-button">
 				<button class="card-filter-reset button" type="button">
