Work on updating content for release

--- a/khyeras/_dev/styles/khyeras_light_v1/theme/sass/compressed/stylesheet.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/sass/compressed/stylesheet.scss
@@ -1,11 +1,10 @@
 /*! phpBB3 Style Sheet
-    --------------------------------------------------------------
+------------------------------------------------------------------
 	Style name:			Khy'eras (version 1.0)
 	Based on style:     prosilver
 	Original author:	Tom Beddard ( http://www.subblue.com/ )
 	Modified by:		phpBB Limited ( https://www.phpbb.com/ )
-    --------------------------------------------------------------
-*/
+------------------------------------------------------------------*/
 
 // Helpers
 @import '../imports/variables';
