--- a/khyeras/_dev/styles/khyeras_v1/template/partials/header_callouts.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/header_callouts.html
@@ -1,14 +1,29 @@
 {% set header_links = {
 	'Announcements' : [
 		{
-			name : 'Officially Open!',
-			date : 'May 19, 2019',
-			url : 'viewtopic.php?f=9&t=47&p=90#p90'
+			name : 'Updates 04.12.20',
+			date : 'April 12, 2020',
+			url  : 'viewtopic.php?f=9&t=200'
 		},
 		{
-			name : 'Roadmap',
-			date : 'May 18, 2019',
-			url : 'viewtopic.php?f=9&t=46'
+			name : 'Character Census and Listing',
+			date : 'April 12, 2020',
+			url  : 'viewtopic.php?f=9&t=200'
+		},
+		{
+			name : 'Updates 11.03.19',
+			date : 'November 03, 2019',
+			url  : 'viewtopic.php?f=9&t=200'
+		},
+		{
+			name : 'Updates 10.27.19',
+			date : 'October 27, 2019',
+			url  : 'viewtopic.php?f=9&t=195'
+		},
+		{
+			name : 'Updates 09.30.19',
+			date : 'September 30, 2019',
+			url  : 'viewtopic.php?f=9&t=133'
 		}
 	]
 } %}
