--- a/khyeras/_dev/styles/khyeras_v1/template/partials/header_content.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/header_content.html
@@ -84,7 +84,7 @@
 		author : '<a href="./viewtopic.php?f=12&amp;t=275#p2217">Calem Sabathe</a>'
 	},
 	{
-		text : '"My teacher calls me Dez, and I\'m looking for a performer." The dragon gave his best smile following his words.<br /><br />"Oh really aren\'t we all? Isn\'t that right soldiers?" The three other warriors nodded in unison. The youngest gave an extra wink. "Right, but you look like a thief to me. So watch yourself kid. We take pride in our job. Stay out of trouble and move along."',
+		text : '"My teacher calls me Dez, and I\'m looking for a performer." The dragon gave his best smile following his words.</p><p>"Oh really aren\'t we all? Isn\'t that right soldiers?" The three other warriors nodded in unison. The youngest gave an extra wink. "Right, but you look like a thief to me. So watch yourself kid. We take pride in our job. Stay out of trouble and move along."',
 		author : '<a href="./viewtopic.php?f=12&amp;t=250#p2055">Dessrexin</a>'
 	},
 	{
@@ -102,6 +102,14 @@
 	{
 		text : 'Quite a few faces turned from their food to look at her - and in that moment, June started to understand why this job might not have been for everyone. Some of these guys looked like they wrestled bears (wait, there were a few sailors here - maybe they wrestled octo-bears?) just for the fun of it.',
 		author : '<a href="./viewtopic.php?f=12&amp;t=296#p2480">Spirits of Adventure</a>'
+	},
+	{
+		text : 'Quite a few faces turned from their food to look at her - and in that moment, June started to understand why this job might not have been for everyone. Some of these guys looked like they wrestled bears (wait, there were a few sailors here - maybe they wrestled octo-bears?) just for the fun of it.',
+		author : '<a href="./viewtopic.php?f=12&amp;t=296#p2480">Spirits of Adventure</a>'
+	},
+	{
+		text : '"Put me to work," she said, a little tonelessly. "I have some skill with a hammer. Not much. I am strong."</p><p>With this glowing assessment of her own capabilities complete, she stood and waited for her orders.',
+		author : '<a href="./viewtopic.php?f=12&amp;t=270&amp;start=20#p2513">Jourin Argall</a>'
 	}
 ] %}
 
