--- a/khyeras/_dev/styles/khyeras_v1/template/partials/header_welcome.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/header_welcome.html
@@ -63,7 +63,7 @@
 							Freed from Bhelest's nightmares and undead legions, the realm of Khy'eras - called "The Neverend" - unveiled vast reaches perfect for exploration. Create a character, craft unlimited adventures, and unlock the land's secrets. <a class="read-more" href="{{ ROOT_PATH }}lore-history">Read more...</a>
 						</p>
 						<p>
-							The current year is <span class="year">288 AoN</span> and the season is fall. <a href="{{ ROOT_PATH }}lore-timeline" class="read-more">Check here for Khy'eras' timeline.</a>
+							The current year is <span class="year">289 AoN</span> and the season is spring. <a href="{{ ROOT_PATH }}lore-timeline" class="read-more">Check here for Khy'eras' timeline.</a>
 						</p>
 					</div>
 				</div>
