--- a/khyeras/styles/khyeras_v1/template/partials/header_featured.html
+++ b/khyeras/styles/khyeras_v1/template/partials/header_featured.html
@@ -1,23 +1,23 @@
 {% set featured_blocks = [
 	{
-		url : 'about-rules',
-		type : 'rules',
-		text : 'About: Rules'
+		url  : 'members-character-census',
+		type : 'character-census',
+		text : 'Character Census'
 	},
 	{
-		url : 'lore-history',
-		type : 'history',
-		text : 'Lore: History'
+		url  : 'members-character-listing',
+		type : 'character-listing',
+		text : 'Character Listing'
 	},
 	{
-		url : 'lore-races',
-		type : 'races',
-		text : 'Lore: Races'
+		url  : 'about-getting-started#creating-a-character',
+		type : 'profiles',
+		text : 'New Profile Fields'
 	},
 	{
-		url : 'setting-map',
-		type : 'map',
-		text : 'Setting: Map'
+		url  : 'setting',
+		type : 'setting',
+		text : 'Expanded Locations'
 	}
 ] %}
 
