--- a/khyeras/_dev/styles/khyeras_v1/template/partials/memberlist_character_desc.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/memberlist_character_desc.html
@@ -1,3 +1,5 @@
+{% import 'utilities/macros.html' as function %}
+
 <div class="character-description{{ character_class }}">
 	{% set feature_fields = {
 		(PROFILE_C_HEIGHT_NAME)     : PROFILE_C_HEIGHT_VALUE,
