--- a/khyeras/_dev/styles/khyeras_v1/template/partials/nav_menu_about.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/nav_menu_about.html
@@ -1,3 +1,4 @@
+{% import 'utilities/macros.html' as function %}
 {% if not S_IS_BOT && (S_DISPLAY_MEMBERLIST || U_TEAM) %}
 	{% if U_TEAM %}
 		{{ function.create_nav_li(U_TEAM, lang('THE_TEAM')) }}
