--- a/khyeras/_dev/styles/khyeras_v1/template/partials/nav_menu_quick_links.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/nav_menu_quick_links.html
@@ -1,3 +1,4 @@
+{% import 'utilities/macros.html' as function %}
 {% EVENT navbar_header_quick_links_before %}
 {% if S_DISPLAY_SEARCH %}
 	{% if S_USER_LOGGED_IN %}
