--- a/khyeras/_dev/styles/khyeras_v1/template/partials/content_leveling.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/content_leveling.html
@@ -1,3 +1,5 @@
+{% import 'utilities/macros.html' as function %}
+
 {% spaceless %}
 	{% set max_level = 60 %}
 	{% set multiplier = max_level / 5 %}
