--- a/khyeras/_dev/styles/khyeras_v1/template/partials/header_content.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/header_content.html
@@ -115,7 +115,7 @@
 
 <div id="site-description" class="site-description">
 	<h1>
-		<a href="{% if U_SITE_HOME %}{{ U_SITE_HOME }}{% else %}{{ U_INDEX }}{% endif %}" title="{% if U_SITE_HOME %}{{ lang('SITE_HOME') }}{% else %}{{ lang('INDEX') }}{% endif %}">{{ SITENAME }}</a>
+		<a href="{% if U_SITE_HOME %}{{ U_SITE_HOME }}{% else %}{{ U_INDEX }}{% endif %}" title="{% if U_SITE_HOME %}{{ L_SITE_HOME }}{% else %}{{ L_INDEX }}{% endif %}">{{ SITENAME }}</a>
 	</h1>
 	<h3>{{ SITE_DESCRIPTION }}</h3>
 	<p class="skiplink"><a href="#start_here">{{ lang('SKIP') }}</a></p>
