--- a/khyeras/_dev/styles/khyeras_v1/template/partials/header_welcome.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/header_welcome.html
@@ -1,3 +1,5 @@
+{% import 'utilities/macros.html' as function %}
+
 <section id="page-welcome" class="page-welcome">
 	<div class="wrapper">
 		<div class="panel">
