--- a/khyeras/_dev/styles/khyeras_v1/template/partials/nav_menu_01.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/nav_menu_01.html
@@ -1,3 +1,5 @@
+{% import 'utilities/macros.html' as function %}
+
 <ul class="menu nav-menu" role="menu">
 	{% if KHY_NAV_LINKS %}
 		{% for key, link in KHY_NAV_LINKS if link.is_nav %}
