--- a/khyeras/styles/khyeras_v1/template/faq_body.html
+++ b/khyeras/styles/khyeras_v1/template/faq_body.html
@@ -1,6 +1,5 @@
 {% import 'utilities/macros.html' as function %}
-
-<!-- INCLUDE overall_header.html -->
+{% include 'overall_header.html' %}
 
 {% set custom_faq = faq_block %}
 
