--- a/khyeras/styles/khyeras_v1/template/overall_footer.html
+++ b/khyeras/styles/khyeras_v1/template/overall_footer.html
@@ -7,7 +7,7 @@
 		<footer id="page-footer" class="page-footer" role="contentinfo">
 			<div class="footer-inner">
 				<div class="wrapper">
-					<div class="flex-row flex-row-20">
+					<div class="flex-row flex-row-20" role="menu">
 						<div class="flex-column">
 							<h4>About</h4>
 							<p>Free from Bhelest's nightmares and undead legions, the realm of Khy'eras - called "The Neverend" - unveils vast reaches perfect for exploration. Create a character, craft unlimited adventures, and unlock the land's secrets. Khy'eras is an original high fantasy / medieval RPG with no word count and a focus on collaborative writing experiences. <a class="read-more" href="{{ ROOT_PATH }}about">Read more...</a></p>
@@ -95,7 +95,7 @@
 	</div>
 
 	<script src="{T_JQUERY_LINK}"></script>
-	<!-- IF S_ALLOW_CDN --><script>window.jQuery || document.write('\x3Cscript src="{T_ASSETS_PATH}/javascript/jquery.min.js?assets_version={T_ASSETS_VERSION}">\x3C/script>');</script><!-- ENDIF -->
+	<!-- IF S_ALLOW_CDN --><script>window.jQuery || document.write('\x3Cscript src="{T_ASSETS_PATH}/javascript/jquery-3.4.1.min.js?assets_version={T_ASSETS_VERSION}">\x3C/script>');</script><!-- ENDIF -->
 	<script src="{T_ASSETS_PATH}/javascript/core.js?assets_version={T_ASSETS_VERSION}"></script>
 	<!-- INCLUDEJS forum_fn.js -->
 	<!-- INCLUDEJS ajax.js -->
