--- a/khyeras/styles/khyeras_v1/template/partials/content_census.html
+++ b/khyeras/styles/khyeras_v1/template/partials/content_census.html
@@ -1,3 +1,34 @@
+{% macro create_pie_chart(title, type, data, total) %}
+	{% if data %}
+		{% set previous_value = 0 %}
+		<div class="pie-chart pie-chart-{{ type }} flex-column">
+			<div class="pie-chart-circle">
+				<div class="pie-chart-circle-wrapper">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" preserveAspectRatio="xMinYMid">
+						{% for key, value in data %}
+							{% if loop.index0 != 0 %}
+								{% set previous_value = previous_value + percentage %}
+							{% endif %}
+							{% set percentage = ((100 / total) * value) | round(1, 'ceil') %}
+							<circle class="pie-chart-slice pie-chart-slice-{{ loop.index0 }}" r="16" cx="16" cy="16" stroke-dashoffset="-{{ previous_value }}" stroke-dasharray="{{ percentage }} 100" data-circle-name="{{ key }}" />
+						{% endfor %}
+					</svg>
+				</div>
+			</div>
+			<h5 class="pie-chart-title">{{ title }}</h5>
+			<div class="pie-chart-key">
+				<ul>
+					{% for key, value in data %}
+						<li>
+							<span class="pie-chart-key-color pie-chart-key-color-{{ loop.index0 }}"></span><strong>{{ key }}:</strong> {{ value }}
+						</li>
+					{% endfor %}
+				</ul>
+			</div>
+		</div>
+	{% endif %}
+{% endmacro %}
+
 {% set limit = 'Last 180 days' %}
 {% set all = 'All time' %}
 
@@ -8,25 +39,25 @@
 		{% for key, value in KHY_CENSUS['race']['limit'] %}
 			{% set race_limit_total = race_limit_total + value %}
 		{% endfor %}
-		{{ function.create_pie_chart(limit  ~ ', with Half-breed', 'race-limit', KHY_CENSUS['race']['limit'], race_limit_total) }}
+		{{ _self.create_pie_chart(limit  ~ ', with Half-breed', 'race-limit', KHY_CENSUS['race']['limit'], race_limit_total) }}
 
 		{% set race_limit_expanded_total = 0 %}
 		{% for key, value in KHY_CENSUS['race']['limit_expanded'] %}
 			{% set race_limit_expanded_total = race_limit_expanded_total + value %}
 		{% endfor %}
-		{{ function.create_pie_chart(limit  ~ ', Half-breed expanded', 'race-limit-expanded', KHY_CENSUS['race']['limit_expanded'], race_limit_expanded_total) }}
+		{{ _self.create_pie_chart(limit  ~ ', Half-breed expanded', 'race-limit-expanded', KHY_CENSUS['race']['limit_expanded'], race_limit_expanded_total) }}
 
 		{% set race_all_total = 0 %}
 		{% for key, value in KHY_CENSUS['race']['all'] %}
 			{% set race_all_total = race_all_total + value %}
 		{% endfor %}
-		{{ function.create_pie_chart(all  ~ ', with Half-breed', 'race-all', KHY_CENSUS['race']['all'], race_all_total) }}
+		{{ _self.create_pie_chart(all  ~ ', with Half-breed', 'race-all', KHY_CENSUS['race']['all'], race_all_total) }}
 
 		{% set race_all_expanded_total = 0 %}
 		{% for key, value in KHY_CENSUS['race']['all_expanded'] %}
 			{% set race_all_expanded_total = race_all_expanded_total + value %}
 		{% endfor %}
-		{{ function.create_pie_chart(all  ~ ', Half-breed expanded', 'race-all-expanded', KHY_CENSUS['race']['all_expanded'], race_all_expanded_total) }}
+		{{ _self.create_pie_chart(all  ~ ', Half-breed expanded', 'race-all-expanded', KHY_CENSUS['race']['all_expanded'], race_all_expanded_total) }}
 	</div>
 </section>
 
@@ -37,25 +68,25 @@
 		{% for key, value in KHY_CENSUS['class']['limit'] %}
 			{% set class_limit_total = class_limit_total + value %}
 		{% endfor %}
-		{{ function.create_pie_chart(limit  ~ ', with Dual class', 'class-limit', KHY_CENSUS['class']['limit'], class_limit_total) }}
+		{{ _self.create_pie_chart(limit  ~ ', with Dual class', 'class-limit', KHY_CENSUS['class']['limit'], class_limit_total) }}
 
 		{% set class_limit_expanded_total = 0 %}
 		{% for key, value in KHY_CENSUS['class']['limit_expanded'] %}
 			{% set class_limit_expanded_total = class_limit_expanded_total + value %}
 		{% endfor %}
-		{{ function.create_pie_chart(limit  ~ ', Dual class expanded', 'class-limit-expanded', KHY_CENSUS['class']['limit_expanded'], class_limit_expanded_total) }}
+		{{ _self.create_pie_chart(limit  ~ ', Dual class expanded', 'class-limit-expanded', KHY_CENSUS['class']['limit_expanded'], class_limit_expanded_total) }}
 
 		{% set class_all_total = 0 %}
 		{% for key, value in KHY_CENSUS['class']['all'] %}
 			{% set class_all_total = class_all_total + value %}
 		{% endfor %}
-		{{ function.create_pie_chart(all  ~ ', with Dual class', 'class-all', KHY_CENSUS['class']['all'], class_all_total) }}
+		{{ _self.create_pie_chart(all  ~ ', with Dual class', 'class-all', KHY_CENSUS['class']['all'], class_all_total) }}
 
 		{% set class_all_expanded_total = 0 %}
 		{% for key, value in KHY_CENSUS['class']['all_expanded'] %}
 			{% set class_all_expanded_total = class_all_expanded_total + value %}
 		{% endfor %}
-		{{ function.create_pie_chart(all  ~ ', Dual class expanded', 'class-all-expanded', KHY_CENSUS['class']['all_expanded'], class_all_expanded_total) }}
+		{{ _self.create_pie_chart(all  ~ ', Dual class expanded', 'class-all-expanded', KHY_CENSUS['class']['all_expanded'], class_all_expanded_total) }}
 	</div>
 </section>
 
@@ -66,13 +97,13 @@
 		{% for key, value in KHY_CENSUS['gender']['limit'] %}
 			{% set gender_limit_total = gender_limit_total + value %}
 		{% endfor %}
-		{{ function.create_pie_chart(limit, 'gender-limit', KHY_CENSUS['gender']['limit'], gender_limit_total) }}
+		{{ _self.create_pie_chart(limit, 'gender-limit', KHY_CENSUS['gender']['limit'], gender_limit_total) }}
 
 		{% set gender_all_total = 0 %}
 		{% for key, value in KHY_CENSUS['gender']['all'] %}
 			{% set gender_all_total = gender_all_total + value %}
 		{% endfor %}
-		{{ function.create_pie_chart(all, 'gender-all', KHY_CENSUS['gender']['all'], gender_all_total) }}
+		{{ _self.create_pie_chart(all, 'gender-all', KHY_CENSUS['gender']['all'], gender_all_total) }}
 	</div>
 </section>
 
@@ -83,12 +114,12 @@
 		{% for key, value in KHY_CENSUS['residence']['limit'] %}
 			{% set residence_limit_total = residence_limit_total + value %}
 		{% endfor %}
-		{{ function.create_pie_chart(limit, 'residence-limit', KHY_CENSUS['residence']['limit'], residence_limit_total) }}
+		{{ _self.create_pie_chart(limit, 'residence-limit', KHY_CENSUS['residence']['limit'], residence_limit_total) }}
 
 		{% set residence_all_total = 0 %}
 		{% for key, value in KHY_CENSUS['residence']['all'] %}
 			{% set residence_all_total = residence_all_total + value %}
 		{% endfor %}
-		{{ function.create_pie_chart(all, 'residence-all', KHY_CENSUS['residence']['all'], residence_all_total) }}
+		{{ _self.create_pie_chart(all, 'residence-all', KHY_CENSUS['residence']['all'], residence_all_total) }}
 	</div>
 </section>
