--- a/khyeras/styles/khyeras_v1/template/partials/content_sitemap.html
+++ b/khyeras/styles/khyeras_v1/template/partials/content_sitemap.html
@@ -1,3 +1,5 @@
+{% import 'utilities/macros.html' as function %}
+
 <div class="sitemap">
 	{% if KHY_NAV_LINKS %}
 		{% for key, link in KHY_NAV_LINKS %}
