--- a/khyeras/styles/khyeras_v1/template/partials/memberlist_writer_desc.html
+++ b/khyeras/styles/khyeras_v1/template/partials/memberlist_writer_desc.html
@@ -1,3 +1,5 @@
+{% import 'utilities/macros.html' as function %}
+
 <div class="writer-description{{ writer_class }}">
 	{% if !PROFILE_C_WRITER_NAME_VALUE %}
 		{% set about_fields = {
