--- a/khyeras/styles/khyeras_v1/template/partials/memberlist_writer_details.html
+++ b/khyeras/styles/khyeras_v1/template/partials/memberlist_writer_details.html
@@ -1,3 +1,5 @@
+{% import 'utilities/macros.html' as function %}
+
 <dl class="details{{ writer_class }}">
 	{% if S_USER_INACTIVE %}
 		<dt>{{ lang('USER_IS_INACTIVE') }}{{ lang('COLON') }}</dt>
