--- a/khyeras/styles/khyeras_v1/template/partials/viewtopic_character_details.html
+++ b/khyeras/styles/khyeras_v1/template/partials/viewtopic_character_details.html
@@ -1,3 +1,4 @@
+{% import 'utilities/macros.html' as function %}
 {% for post in postrow.khy %}
 	<dd class="profile-character-details">
 		<div class="character-card">
